Upgrade substrait-java to 0.84.1 for Calcite 1.42..0 compatibility