@@ -98,7 +98,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow ${argLine}</argLine>
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED ${argLine}</argLine>
                     <environmentVariables>
                         <AWS_REGION>us-east-1</AWS_REGION>
                     </environmentVariables>
@@ -111,7 +111,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow ${argLine}</argLine>
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED ${argLine}</argLine>
                     <environmentVariables>
                         <AWS_REGION>us-east-1</AWS_REGION>
                     </environmentVariables>
